# Smart-Meeting-CopilotPlus

./: PRD.md  tasklist.md
smartcopilot-api/: main.py  pyproject.toml
smartcopilot-api/src/: __init__.py  mcpserver.py
smartcopilot-api/src/notebook/: end_to_end_workflow.ipynb  first_layer.ipynb  practice.ipynb  slack.ipynb  workflow.ipynb
smartcopilot-api/src/prompts/: __init__.py
