[project]
name = "smartcopilot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.9",
    "lark>=1.2.2",
    "pydantic>=2.11.7",
]
